[gd_scene load_steps=12 format=3 uid="uid://bx3omexnr2i6i"]

[ext_resource type="Script" uid="uid://c0dv58r0xtbmx" path="res://scripts/collectable/gold_coin.gd" id="1_rlwc1"]
[ext_resource type="Texture2D" uid="uid://bm1bjquwh2m6r" path="res://assets/Pirate Treasure/Sprites/Coin Effect/01.png" id="2_egn6r"]
[ext_resource type="Texture2D" uid="uid://dvptojhfsxjkx" path="res://assets/Pirate Treasure/Sprites/Coin Effect/02.png" id="3_es7bp"]
[ext_resource type="Texture2D" uid="uid://cw1scswp8g0ot" path="res://assets/Pirate Treasure/Sprites/Coin Effect/03.png" id="4_ddnfk"]
[ext_resource type="Texture2D" uid="uid://d25wpkip2lukm" path="res://assets/Pirate Treasure/Sprites/Gold Coin/01.png" id="5_3regr"]
[ext_resource type="Texture2D" uid="uid://cix40r8y3ocll" path="res://assets/Pirate Treasure/Sprites/Gold Coin/02.png" id="6_8t2vd"]
[ext_resource type="Texture2D" uid="uid://bnbhd87uibdt4" path="res://assets/Pirate Treasure/Sprites/Gold Coin/03.png" id="7_5trur"]
[ext_resource type="Texture2D" uid="uid://nku3v5u2lpms" path="res://assets/Pirate Treasure/Sprites/Gold Coin/04.png" id="8_xb5hj"]
[ext_resource type="AudioStream" uid="uid://d3dor375wbl26" path="res://assets/Collectibles_8.wav" id="9_egn6r"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ty1g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_egn6r")
}, {
"duration": 1.0,
"texture": ExtResource("3_es7bp")
}, {
"duration": 1.0,
"texture": ExtResource("4_ddnfk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"collect",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_3regr")
}, {
"duration": 1.0,
"texture": ExtResource("6_8t2vd")
}, {
"duration": 1.0,
"texture": ExtResource("7_5trur")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb5hj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cjqg0"]
radius = 5.8816004

[node name="GoldCoin" type="Area2D"]
collision_layer = 0
script = ExtResource("1_rlwc1")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ty1g6")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.29598886

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.0476242, 1.1049777)
shape = SubResource("CircleShape2D_cjqg0")

[node name="CollectCoinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_egn6r")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on__sprite_animation_finished"]
